# gpumon

./: README.md  hosts.txt  pyproject.toml
src/gpumon/: cli.py
